IMPALA-12969: Release JNI array if DeserializeThriftMsg failed

Before this patch ReleaseByteArrayElements was not called in case
the deserialization failed (e.g. by hitting Thrift's MaxMessageSize).
This could potentially cause JVM/native heap leak, depending on how
the JVM handled the array allocation.

Change-Id: Id2c0335b12e9289ae851d0ec050765951a8ca6c7
Reviewed-on: http://gerrit.cloudera.org:8080/21234
Reviewed-by: Michael Smith <michael.smith@cloudera.com>
Reviewed-by: Daniel Becker <daniel.becker@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>