be/src/rpc/jni-thrift-util.h
@@ -58,13 +58,13 @@ Status DeserializeThriftMsg(JNIEnv* env, jbyteArray serialized_msg, T* deseriali
   uint32_t buf_size = env->GetArrayLength(serialized_msg);
   jbyte* buf = env->GetByteArrayElements(serialized_msg, &is_copy);
 
-  RETURN_IF_ERROR(DeserializeThriftMsg(
-          reinterpret_cast<uint8_t*>(buf), &buf_size, false, deserialized_msg));
+  Status status = DeserializeThriftMsg(
+          reinterpret_cast<uint8_t*>(buf), &buf_size, false, deserialized_msg);
 
   /// Return buffer back. JNI_ABORT indicates to not copy contents back to java
   /// side.
   env->ReleaseByteArrayElements(serialized_msg, buf, JNI_ABORT);
-  return Status::OK();
+  return status;
 }
 
 }
